--- a/widget/html/post.html
+++ b/widget/html/post.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>动态-推荐</title>
+        <title>猫咪广场</title>
     </head>
     <link rel="stylesheet" href="../css/common.css">
     <style>
@@ -278,10 +278,10 @@
                     address: '北京市'
                 },
                 created: function () {
-                    
+
                 },
                 mounted: function () {
-                   
+
                 },
                 methods: {
                     test: function () {
